refactor: refactor shouldAcceptTrucoIfIHaveStrongCardsInHandAndWinTheFirstRound test to use mock